# kernel-strider

./: Readme.txt
devel/util/for_tsan/symbolize/: CMakeLists.txt  config.h.in  main.cpp  symbol_info.h
sources/: AUTHORS  CMakeLists.txt  README  config.h.in  libelf_check.c
sources/cmake/: Readme.developer.txt
sources/cmake/kmodule_sources/check_alloc_workqueue_key/: module.c
sources/cmake/kmodule_sources/check_kedr_annotations/: module.c
sources/cmake/kmodule_sources/check_module_unload/: module.c
sources/cmake/kmodule_sources/check_ndo_fdb_add/: module.c
sources/cmake/kmodule_sources/check_ndo_fdb_del/: module.c
sources/cmake/kmodule_sources/check_request_fw/: module.c
sources/cmake/kmodule_sources/check_vm_split/: module.c
sources/cmake/modules/: Copyright.txt  FindPythonInterp.cmake  cmake_useful.cmake  kbuild_system.cmake  kmodule.cmake  path_prefixes.cmake
sources/converter/: CMakeLists.txt  Readme.developer.txt
sources/converter/simple/: CMakeLists.txt  README  converter.cpp
sources/converter/tests/: CMakeLists.txt
sources/converter/tsan/: CMakeLists.txt  converter.cpp  converter.cpp.orig  converter_usage
sources/core/: CMakeLists.txt  Readme.developer.txt  annot_impl.c  annot_impl.h  annotations.c  core_impl.h  core_impl.h.in  fh_impl.c  fh_impl.h  handlers.c  handlers.h  hooks.h  i13n.c  i13n.h  ifunc.c  ifunc.h  insn_gen.c  insn_gen.h  ir.c  ir.h  module.c  module_ms_alloc.c  module_ms_alloc.h  resolve_ip.c  resolve_ip.h  sections.c  sections.h  target.h  thunks.h  thunks_32.S  thunks_64.S  tid.c  tid.h  transform.c  transform.h  util.c  util.h
sources/core/annotations/: CMakeLists.txt  kedr_annotations.c  kedr_annotations.h
sources/core/annotations/kernel_patches/: Readme.txt  kedr-annotations-3.12.patch
sources/core/annotations/tests/: CMakeLists.txt  test.sh.in
sources/core/asm_offsets/: Kbuild.in  kedr_asm_offsets.c
sources/core/tests/: CMakeLists.txt
sources/core/tests/callbacks/: CMakeLists.txt  Readme.developer.txt
sources/core/tests/debug_util/: Readme.developer.txt  debug_util.c  debug_util.h
sources/core/um_helpers/: CMakeLists.txt  kedr_get_sections.sh.in
sources/doc/: tutorial.txt
sources/event_collector/: CMakeLists.txt  event_collector.c  trace_buffer.c  trace_buffer.h
sources/event_collector/tests/: CMakeLists.txt  core_stub_api.h
sources/examples/: CMakeLists.txt
sources/examples/buggy01/: CMakeLists.txt  Kbuild.in  makefile_installed.in  module.c
sources/examples/buggy01_annotated/: CMakeLists.txt  Kbuild.in  Kbuild_annotations_in_kernel.in  makefile_installed.in  module.c
sources/examples/test_buggy01/: CMakeLists.txt  test_buggy01.c
sources/functions/: CMakeLists.txt  Readme.developer.txt
sources/functions/cdev/: CMakeLists.txt  cdev_add.data  cdev_del.data
sources/functions/common/: CMakeLists.txt  group.list.in  module.c
sources/functions/fs/: CMakeLists.txt  Readme
sources/functions/groups/: CMakeLists.txt
sources/functions/net/: CMakeLists.txt  drd_net_common.h
sources/functions/tests/: CMakeLists.txt
sources/functions/usb/: CMakeLists.txt  usb_deregister.data  usb_kill_anchored_urbs.data  usb_kill_urb.data  usb_poison_anchored_urbs.data  usb_poison_urb.data  usb_register_driver.data  usb_submit_urb.data
sources/functions/util/: fh_plugin.c  fh_plugin.h
sources/i13n/: Readme.developer.txt
sources/include/: CMakeLists.txt  Readme.developer.txt
sources/include/kedr/: annotations.h  object_types.h
sources/include/kedr/utils/: uuid.h  (+1 more)
sources/output/: CMakeLists.txt  Readme.developer.txt  Readme.txt  ctf_meta.in  ctf_meta_template  trace_definition.h  udp_packet_definition.h
sources/output/kernel/: CMakeLists.txt  determine_pointer_size.c  event_collector.c  meta_format.data  net_message.c  net_message.h  trace_definition.h  trace_packets.c  trace_packets.h  trace_sender.c  trace_sender.h  trace_server.c  uuid_generator.c  uuid_generator.h
sources/output/tests/: CMakeLists.txt
sources/output/user/: CMakeLists.txt  README  trace_receiver.cpp  trace_receiver.h  trace_receiver_control.cpp  trace_receiver_control_test.in  trace_receiver_control_usage
sources/plugins/: CMakeLists.txt  Readme  module_ref_model.h
sources/plugins/cdev/: CMakeLists.txt  Readme  file_operations.data  module.c
sources/plugins/file_system/: CMakeLists.txt  callback_interceptor.c  file_operations.data  file_system_type.data  fill_super_interceptor.data  inode_file_operations.data  inode_operations.data  miscdev_file_operations.data  miscdev_file_operations_interceptor.h  module.c  module.data  super_operations.data  vma_operations_clone_interceptor.data  vma_operations_interceptor.c  vma_operations_interceptor.data
sources/plugins/templates/: README
sources/tests/: CMakeLists.txt  Readme.developer.txt
sources/tests/bug_bench/: CMakeLists.txt  Readme.developer.txt  check_sample_and_buggy01.awk  test_common.sh.in  test_sample_and_buggy01.sh.in
sources/tests/dummy_target/: CMakeLists.txt
sources/tests/sample_target/: CMakeLists.txt  kedr_sample_target.in  module.makefile.in
sources/tests/util/: Readme.developer.txt  check_signal_wait.awk
sources/tools/: CMakeLists.txt
sources/tools/um_helpers/: CMakeLists.txt  kedr_get_sections.sh
sources/utils/: CMakeLists.txt  kedr.py.in
sources/utils/ctf_reader/: CMakeLists.txt  README  ctf_ast.cpp  ctf_ast.h  ctf_context.cpp  ctf_hash.cpp  ctf_meta.cpp  ctf_reader.c  ctf_reader.cpp  ctf_reader_builder.cpp  ctf_reader_core.h  ctf_reader_iter.cpp  ctf_reader_parser.h  ctf_reader_parser_base.tab.cc  ctf_reader_parser_base.tab.hh  ctf_reader_parser_base.yy  ctf_reader_scanner.h  ctf_reader_scanner_base.cc  ctf_reader_scanner_base.l  ctf_root_type.cpp  ctf_root_type.h  ctf_scope.cpp  ctf_scope.h  ctf_tag.cpp  ctf_type.cpp  ctf_types.cpp  ctf_var.cpp  ctf_var_place.cpp  layout_support.cpp
sources/utils/for_tsan/: CMakeLists.txt  kedr_show_target_sections.sh
sources/utils/kedr_trace_reader/: CMakeLists.txt  README  kedr_trace_reader.cpp
sources/utils/simple_trace_recorder/: CMakeLists.txt  Readme.txt  kedr_st_rec_config.h.in  recorder.h
(+1399 files in other folders)
